# AskTheHandbook

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  prompts.yaml  pyproject.toml  requirements-prod.txt  requirements.txt
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: ci.yaml
data/: grading-document.md  student-handbook.md
db/: chroma.sqlite3
eval/: eval_prompts.json  evaluate.py  report.json
src/: generate.py  ingest.py  retrieve.py  tracing.py
static/: index.html
