[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "datasets>=5.0.0",
    "deepeval>=4.0.6",
    "docling>=2.101.0",
    "faiss-cpu>=1.14.2",
    "google-genai>=2.8.0",
    "gradio>=6.17.3",
    "groq>=1.4.0",
    "ipykernel>=7.3.0",
    "langchain-chroma>=1.1.0",
    "langchain>=1.3.7",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.5",
    "langchain-google-genai>=4.2.5",
    "langchain-google-vertexai>=3.2.4",
    "langchain-openai>=1.3.0",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "langchain-huggingface>=1.2.2",
    "langchain-classic>=1.0.8",
]
